# sqlx

./: .gitignore  Cargo.toml  README.md  release.toml  test.sh
.github/workflows/: mariadb.yml  mysql.yml  postgres.yml  rust.yml
examples/realworld-postgres/: Cargo.toml
examples/realworld-postgres/src/: main.rs
sqlx-core/: Cargo.toml
sqlx-core/src/io/: buf_stream.rs
sqlx-core/src/mysql/: connection.rs
sqlx-core/src/pool/: inner.rs  mod.rs
sqlx-core/src/postgres/: connection.rs
sqlx-macros/: Cargo.toml
sqlx-macros/src/: lib.rs
sqlx-macros/src/database/: mod.rs  mysql.rs  postgres.rs
sqlx-macros/src/query_macros/: args.rs  input.rs  mod.rs  output.rs  query.rs
src/: macros.rs
tests/: mysql-types-chrono.rs  mysql-types.rs  mysql.rs  postgres-macros.rs  postgres-types-chrono.rs  postgres-types.rs  postgres.rs
