[package]
name = "tokio-sqlx-macros"
version = "0.1.0"
repository = "https://github.com/vorot93/tokio-sqlx"
description = "Macros for SQLx, the rust SQL toolkit. Not intended to be used directly."
license = "MIT OR Apache-2.0"
edition = "2018"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>", # ryan@launchbadge.com
    "Austin Bonander <austin.bonander@gmail.com>", # austin@launchbadge.com
    "Zachery Gyurkovitz <zgyurkovitz@gmail.com>", # zach@launchbadge.com
    "Daniel Akhterov <akhterovd@gmail.com>", # daniel@launchbadge.com
    "Artem Vorotnikov <artem@vorotnikov.me>"
]

[lib]
proc-macro = true

[features]
default = []

# database
mysql = [ "tokio-sqlx/mysql" ]
postgres = [ "tokio-sqlx/postgres" ]

# type
chrono = [ "tokio-sqlx/chrono" ]
uuid = [ "tokio-sqlx/uuid" ]

[dependencies]
tokio = { version = "0.2.8", features = ["fs", "rt-core"] }
dotenv = { version = "0.15.0", default-features = false }
futures = { version = "0.3.1", default-features = false }
proc-macro-hack = { version = "0.5.11", default-features = false }
proc-macro2 = { version = "1.0.6", default-features = false }
tokio-sqlx = { version = "0.1.0", default-features = false, path = "../sqlx-core", package = "tokio-sqlx-core" }
syn = { version = "1.0.11", default-features = false, features = [ "full" ] }
quote = { version = "1.0.2", default-features = false }
url = { version = "2.1.0", default-features = false }

[package.metadata.docs.rs]
all-features = true
